--- a/src/main/resources/templates/rent/rent-mine.html
+++ b/src/main/resources/templates/rent/rent-mine.html
@@ -33,18 +33,17 @@
                 <div class="car-list-content">
                     <div class="row">
                         <!-- Single Car Start -->
-                        <th:block th:each="car : ${cars}">
+                        <th:block th:each="rent : ${rents}">
                             <div class="col-lg-6 col-md-6">
                                 <div class="single-car-wrap">
-                                    <div class="car-list-thumb" th:style="|background-image:url(${car.picture})|"></div>
+                                    <div class="car-list-thumb" th:style="|background-image:url(${rent.carPicture})|"></div>
                                     <div class="car-list-info without-bar">
-                                        <h2><a href="#" th:text="|${car.make} ${car.model}|"></a></h2>
+                                        <h2><a href="#" th:text="|${rent.carMake} ${rent.carModel}|"></a></h2>
                                         <ul class="car-info-list">
-                                            <li>Собственик или наемател</li>
-                                            <li>Start Date</li>
-                                            <li>End Date</li>
+                                            <li th:text="${rent.user}"></li>
+                                            <li th:text="${rent.startDate}"></li>
+                                            <li th:text="${rent.endDate}"></li>
                                         </ul>
-                                        <a href="#" class="rent-btn">End - samo ako ima vreme</a>
                                     </div>
                                 </div>
                             </div>
