--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,13 +14,13 @@
                 <div class="section-title  text-center">
                     <div class="book-ur-car">
                         <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Small</button></a>
+                            <a href="/category/Small"><button type="submit">Small</button></a>
                         </div>
                         <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Midsize</button></a>
+                            <a href="/category/Midsize"><button type="submit">Midsize</button></a>
                         </div>
                         <div id="category" class="bookcar-btn bookinput-item">
-                            <a href="#"><button type="submit">Large</button></a>
+                            <a href="/category/Large"><button type="submit">Large</button></a>
                         </div>
                     </div>
                 </div>
