--- a/src/main/resources/templates/fragments/logged-in-navbar.html
+++ b/src/main/resources/templates/fragments/logged-in-navbar.html
@@ -55,8 +55,8 @@
                     <nav class="mainmenu alignright">
                         <ul>
                             <li><a href="/cars/mine">My Cars</a></li>
-                            <li><a href="/rents/fromme">My Rented Cars</a></li>
-                            <li><a href="/rents/byme">Rented By Me</a></li>
+                            <li><a href="/rents/fromme">Rented By Me</a></li>
+                            <li><a href="/rents/byme">Rented From Me</a></li>
                             <li><a href="/cars/create">Add a Car</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
