--- a/src/main/resources/templates/car/my-cars.html
+++ b/src/main/resources/templates/car/my-cars.html
@@ -47,6 +47,7 @@
                                         </ul>
                                         <a th:href="@{/cars/details/{id}(id=${car.id})}" class="rent-btn">Details</a>
                                         <a th:href="@{/cars/edit/{id}(id=${car.id})}" class="rent-btn">Edit</a>
+                                        <a th:href="@{/cars/delete/{id}(id=${car.id})}" class="rent-btn">Delete</a>
                                     </div>
                                 </div>
                             </div>
